[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["fukuba-shuma <calculus.fukuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
